crates/ridl-backend-rust/src/snapshots/ridl_backend_rust__tests__scalar_unit_type_with_doc.snap
---
source: crates/ridl-backend-rust/src/tests.rs
expression: "rust_for(vec![speed_decl()])"
---
/// Vehicle speed over ground
#[derive(Debug, Clone, Copy, PartialEq, PartialOrd)]
#[repr(transparent)]
pub struct Speed(::core::primitive::f64);
impl Speed {
    /// Constructs the value, enforcing its typl constraints.
    pub fn new(
        value: ::core::primitive::f64,
    ) -> ::core::result::Result<Self, ::ridl_rt::payload::Violation> {
        Self::check(&value)?;
        ::core::result::Result::Ok(Self::new_unchecked(value))
    }
    /// Checks `value` against this type's typl constraints, without
    /// constructing it. `pub(crate)` rather than `pub`: a caller
    /// outside `new` is a function generated into this crate — since
    /// driftsys/ridl#467 that includes the codec of *another* package
    /// of the same build, which reaches this type through the module
    /// tree and so cannot see a private item here. The emitted crate
    /// is one crate per build, so `pub(crate)` reaches every such
    /// caller while adding nothing to the crate's public surface.
    /// Whether this becomes `pub` is Epic 10's call, still open.
    /// `new` is the composition of this and `new_unchecked`.
    pub(crate) fn check(
        value: &::core::primitive::f64,
    ) -> ::core::result::Result<(), ::ridl_rt::payload::Violation> {
        let value = *value;
        if !value.is_finite() {
            return ::core::result::Result::Err(::ridl_rt::payload::Violation {
                type_name: "Speed",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        if value < 0.0 {
            return ::core::result::Result::Err(::ridl_rt::payload::Violation {
                type_name: "Speed",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        if value > 250.0 {
            return ::core::result::Result::Err(::ridl_rt::payload::Violation {
                type_name: "Speed",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        if {
            let __checked: ::core::primitive::f64 = value as ::core::primitive::f32
                as ::core::primitive::f64;
            {
                let __factor: ::core::primitive::f64 = 1f64;
                let __original_step: ::core::primitive::f64 = 0.5f64;
                let __step: ::core::primitive::f64 = 0.5f64;
                let __step_low: ::core::primitive::f64 = 0f64;
                let __phase: ::core::primitive::f64 = 0f64;
                let __phase_low: ::core::primitive::f64 = 0f64;
                if !__checked.is_finite() {
                    true
                } else {
                    let __represented = (__checked as ::core::primitive::f32).abs();
                    let __bits = __represented.to_bits();
                    let __below = if __bits == 0 {
                        -::core::primitive::f32::from_bits(1)
                    } else {
                        ::core::primitive::f32::from_bits(__bits - 1)
                    };
                    let __above = ::core::primitive::f32::from_bits(__bits + 1);
                    let __lower_gap = (__represented - __below)
                        as ::core::primitive::f64;
                    let __upper_gap = if __above.is_finite() {
                        (__above - __represented) as ::core::primitive::f64
                    } else {
                        __lower_gap
                    };
                    let __cell = (__lower_gap + __upper_gap) / 2.0;
                    if __original_step < __cell {
                        false
                    } else {
                        let __scaled_value = __checked * __factor;
                        let __delta = __scaled_value - __phase;
                        let __quotient = if __delta.is_finite() {
                            __delta / __step
                        } else {
                            __scaled_value / __step - __phase / __step
                        };
                        let __index = __quotient.round();
                        let __scale = __checked
                            .abs()
                            .max((__phase / __factor).abs())
                            .max(__original_step.abs());
                        let __tolerance = (4.0
                            * (::core::primitive::f32::EPSILON as ::core::primitive::f64)
                            * __scale)
                            .min(__original_step / 4.0);
                        let mut __distance = ::core::primitive::f64::INFINITY;
                        for __candidate in [__index - 1.0, __index, __index + 1.0] {
                            let __product = __candidate * __step;
                            let __sum = __product + __phase;
                            let __nearest = if __product.is_finite() && __sum.is_finite()
                            {
                                let __product_error = __candidate
                                    .mul_add(__step, -__product);
                                let __part = __sum - __product;
                                let __sum_error = (__product - (__sum - __part))
                                    + (__phase - __part);
                                let __low = __candidate.mul_add(__step_low, __phase_low)
                                    + __product_error + __sum_error;
                                __sum + __low
                            } else {
                                __candidate.mul_add(__step, __phase)
                                    + __candidate.mul_add(__step_low, __phase_low)
                            };
                            let __nearest = (__nearest / __factor)
                                as ::core::primitive::f32 as ::core::primitive::f64;
                            if __nearest.is_finite() {
                                __distance = __distance.min((__checked - __nearest).abs());
                            }
                        }
                        !__quotient.is_finite() || __distance > __tolerance
                    }
                }
            }
        } {
            return ::core::result::Result::Err(::ridl_rt::payload::Violation {
                type_name: "Speed",
                rule: ::ridl_rt::payload::Rule::Step,
            });
        }
        ::core::result::Result::Ok(())
    }
    /// Constructs the value without checking its constraints.
    ///
    /// Safe: nothing here relies on the invariant for memory
    /// soundness. Use it only for a value already known to satisfy
    /// the contract.
    pub const fn new_unchecked(value: ::core::primitive::f64) -> Self {
        Self(value)
    }
    pub const fn get(self) -> ::core::primitive::f64 {
        self.0
    }
}
impl ::core::convert::TryFrom<::core::primitive::f64> for Speed {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(
        value: ::core::primitive::f64,
    ) -> ::core::result::Result<Self, Self::Error> {
        Self::new(value)
    }
}
impl ::core::convert::From<Speed> for ::core::primitive::f64 {
    fn from(value: Speed) -> Self {
        value.0
    }
}
impl ::core::default::Default for Speed {
    fn default() -> Self {
        Speed::new_unchecked(0.0)
    }
}
/// An accessor over FlatBuffers bytes `Speed`'s `verify` accepted.
///
/// The buffer's root is the box table ADR-0019 decision 8
/// gives this declaration: one non-optional `value` field. A
/// buffer carrying no slot for it holds the FlatBuffers
/// default, 0, when 0 is a legal value of this type, and is
/// `MissingRequired` when it is not.
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
#[allow(deprecated)]
pub struct SpeedFbView<'a> {
    pub(crate) buf: &'a [::core::primitive::u8],
    pub(crate) table: ::core::primitive::usize,
}
#[allow(deprecated)]
impl<'a> ::ridl_rt::payload::View<'a> for SpeedFbView<'a> {
    fn bytes(&self) -> &'a [::core::primitive::u8] {
        self.buf
    }
}
#[allow(deprecated)]
impl<'a> SpeedFbView<'a> {
    /// The value the box carries. `Speed` is one value, so this decodes it rather than borrowing it, which costs one read.
    pub fn value(&self) -> Speed {
        __ridl_fb_decode_Speed(self.buf, self.table)
    }
}
/// Writes `Speed` as its box table and returns its position (ADR-0019 decision 8).
#[allow(deprecated, non_snake_case)]
pub(crate) fn __ridl_fb_encode_Speed(
    value: &Speed,
    builder: &mut ::ridl_rt::flatbuffers::Builder<'_>,
) -> ::core::result::Result<
    ::ridl_rt::flatbuffers::Pos,
    ::ridl_rt::payload::EncodeError,
> {
    ::core::result::Result::Ok({
        let __box = [
            ::ridl_rt::flatbuffers::TableField {
                slot: 0u16,
                offset: 4u16,
                value: {
                    let __s = *value;
                    ::ridl_rt::flatbuffers::Field::F32(
                        __s.get() as ::core::primitive::f32,
                    )
                },
            },
        ];
        builder.push_table(8usize, 4usize, 1u16, &__box)?
    })
}
#[allow(deprecated, non_snake_case)]
pub(crate) fn __ridl_fb_verify_Speed(
    buf: &[::core::primitive::u8],
    table: ::core::primitive::usize,
) -> ::core::result::Result<(), ::ridl_rt::payload::VerifyError> {
    if let ::core::option::Option::Some(__p) = ::ridl_rt::flatbuffers::field(
            buf,
            table,
            0u16,
            4usize,
        )
        .map_err(::ridl_rt::payload::VerifyError::Structure)?
    {
        let __raw = ::ridl_rt::flatbuffers::read_f32(buf, __p)
            .map_err(::ridl_rt::payload::VerifyError::Structure)?;
        Speed::check(&(::core::primitive::f64::from(__raw)))
            .map_err(::ridl_rt::payload::VerifyError::Contract)?;
    }
    ::core::result::Result::Ok(())
}
#[allow(deprecated, non_snake_case)]
pub(crate) fn __ridl_fb_decode_Speed(
    buf: &[::core::primitive::u8],
    table: ::core::primitive::usize,
) -> Speed {
    match ::ridl_rt::flatbuffers::field(buf, table, 0u16, 4usize) {
        ::core::result::Result::Ok(::core::option::Option::Some(__p)) => {
            Speed::new_unchecked(
                ::core::primitive::f64::from(
                    ::ridl_rt::flatbuffers::read_f32(buf, __p).unwrap_or(0.0f32),
                ),
            )
        }
        _ => Speed::new_unchecked(0.0f64),
    }
}
#[allow(deprecated)]
impl ::ridl_rt::payload::Payload<::ridl_rt::encoding::FlatBuffers> for Speed {
    /// The largest FlatBuffers buffer any legal `Speed` encodes to: 46 bytes.
    ///
    /// `ridl_ir::projection::flatbuffers::max_size` computed it,
    /// which is the one implementation of the bound (design note
    /// D-6): each table is charged its `soffset`, its inline
    /// fields, its vtable and one alignment event per slot; a
    /// string four bytes per declared character plus a
    /// terminator; a collection its declared maximum. It is a
    /// literal rather than an expression over the field types
    /// because that slack is not expressible in Rust's type
    /// system.
    const MAX_SIZE: ::core::primitive::usize = 46usize;
    type View<'a> = SpeedFbView<'a>;
    fn encode<'o>(
        &self,
        out: &'o mut [::core::primitive::u8],
    ) -> ::core::result::Result<
        ::ridl_rt::payload::Encoded<'o, SpeedFbView<'o>>,
        ::ridl_rt::payload::EncodeError,
    > {
        let mut builder = ::ridl_rt::flatbuffers::Builder::new(out);
        let __root = __ridl_fb_encode_Speed(self, &mut builder)?;
        let bytes = builder.finish(__root, 8usize)?;
        let table = ::ridl_rt::flatbuffers::root(bytes).unwrap_or(0usize);
        ::core::result::Result::Ok(::ridl_rt::payload::Encoded {
            bytes,
            view: SpeedFbView { buf: bytes, table },
        })
    }
    fn verify(
        buf: &[::core::primitive::u8],
    ) -> ::core::result::Result<SpeedFbView<'_>, ::ridl_rt::payload::VerifyError> {
        if buf.len()
            > <Self as ::ridl_rt::payload::Payload<
                ::ridl_rt::encoding::FlatBuffers,
            >>::MAX_SIZE
        {
            return ::core::result::Result::Err(
                ::ridl_rt::payload::VerifyError::Structure(
                    ::ridl_rt::payload::Malformed::TooLarge,
                ),
            );
        }
        let table = ::ridl_rt::flatbuffers::root(buf)
            .map_err(::ridl_rt::payload::VerifyError::Structure)?;
        __ridl_fb_verify_Speed(buf, table)?;
        ::core::result::Result::Ok(SpeedFbView { buf, table })
    }
    fn decode(
        r: ::ridl_rt::payload::Ref<'_, Self, ::ridl_rt::encoding::FlatBuffers>,
    ) -> Self {
        let __view = r.view();
        __ridl_fb_decode_Speed(__view.buf, __view.table)
    }
}
