crates/ridl-backend-rust/src/snapshots/ridl_backend_rust__tests__struct_with_optional_and_reserved.snap
---
source: crates/ridl-backend-rust/src/tests.rs
expression: rust_for(decls)
---
/// Vehicle speed over ground
///
/// Quantization (`step`) is not checked by `new`.
#[derive(Debug, Clone, Copy, PartialEq, PartialOrd)]
#[repr(transparent)]
pub struct Speed(f64);
impl Speed {
    /// Constructs the value, enforcing its typl constraints.
    pub fn new(
        value: f64,
    ) -> ::core::result::Result<Self, ::ridl_rt::payload::Violation> {
        Self::check(&value)?;
        ::core::result::Result::Ok(Self::new_unchecked(value))
    }
    /// Checks `value` against this type's typl constraints, without
    /// constructing it. Not `pub`: the codec (`crate::codec`) is the
    /// one caller outside `new`, and it shares this module (E11.7
    /// stage K6). `new` is the composition of this and
    /// `new_unchecked`.
    fn check(value: &f64) -> ::core::result::Result<(), ::ridl_rt::payload::Violation> {
        let value = *value;
        if value < 0.0 {
            return ::core::result::Result::Err(::ridl_rt::payload::Violation {
                type_name: "Speed",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        if value > 250.0 {
            return ::core::result::Result::Err(::ridl_rt::payload::Violation {
                type_name: "Speed",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        ::core::result::Result::Ok(())
    }
    /// Constructs the value without checking its constraints.
    ///
    /// Safe: nothing here relies on the invariant for memory
    /// soundness. Use it only for a value already known to satisfy
    /// the contract.
    pub const fn new_unchecked(value: f64) -> Self {
        Self(value)
    }
    pub const fn get(self) -> f64 {
        self.0
    }
}
impl ::core::convert::TryFrom<f64> for Speed {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: f64) -> ::core::result::Result<Self, Self::Error> {
        Self::new(value)
    }
}
impl ::core::convert::From<Speed> for f64 {
    fn from(value: Speed) -> Self {
        value.0
    }
}
impl Default for Speed {
    fn default() -> Self {
        Speed::new_unchecked(0.0)
    }
}
#[derive(Debug, Clone, PartialEq, Eq, Hash)]
#[repr(transparent)]
pub struct Label(String);
impl Label {
    /// Constructs the value, enforcing its typl constraints.
    pub fn new(
        value: String,
    ) -> ::core::result::Result<Self, ::ridl_rt::payload::Violation> {
        Self::check(&value)?;
        ::core::result::Result::Ok(Self::new_unchecked(value))
    }
    /// Checks `value` against this type's typl constraints, without
    /// constructing it. Not `pub`: the codec (`crate::codec`) is the
    /// one caller outside `new`, and it shares this module (E11.7
    /// stage K6). `new` is the composition of this and
    /// `new_unchecked`.
    fn check(value: &str) -> ::core::result::Result<(), ::ridl_rt::payload::Violation> {
        if (value.chars().count() as u64) > 256 {
            return ::core::result::Result::Err(::ridl_rt::payload::Violation {
                type_name: "Label",
                rule: ::ridl_rt::payload::Rule::Length,
            });
        }
        ::core::result::Result::Ok(())
    }
    /// Constructs the value without checking its constraints.
    ///
    /// Safe: nothing here relies on the invariant for memory
    /// soundness. Use it only for a value already known to satisfy
    /// the contract.
    pub const fn new_unchecked(value: String) -> Self {
        Self(value)
    }
    pub fn get(&self) -> &str {
        &self.0
    }
    pub fn into_inner(self) -> String {
        self.0
    }
}
impl ::core::convert::TryFrom<String> for Label {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: String) -> ::core::result::Result<Self, Self::Error> {
        Self::new(value)
    }
}
impl ::core::convert::From<Label> for String {
    fn from(value: Label) -> Self {
        value.0
    }
}
#[derive(Debug, Clone, PartialEq)]
pub struct DriverProfile {
    pub name: Label,
    pub speed: Speed,
    pub r#override: Option<Speed>,
}
/// A zero-copy accessor over FlatBuffers bytes `DriverProfile`'s `verify` accepted.
///
/// A scalar, a string, a byte sequence and a nested table are
/// read in place and allocate nothing. A union and a collection
/// are decoded on access instead: a union's arms and a
/// collection's elements have no one view type to hand back.
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
#[allow(deprecated)]
pub struct DriverProfileFbView<'a> {
    buf: &'a [u8],
    table: usize,
}
#[allow(deprecated)]
impl<'a> DriverProfileFbView<'a> {
    /// The verified bytes this view reads.
    pub fn bytes(&self) -> &'a [u8] {
        self.buf
    }
    /// Reads `DriverProfile`'s `name` field in place.
    pub fn name(&self) -> &'a str {
        let __p = ::ridl_rt::flatbuffers::field(self.buf, self.table, 0u16, 4usize)
            .unwrap_or(::core::option::Option::None)
            .unwrap_or(0usize);
        ::ridl_rt::flatbuffers::string(self.buf, __p).unwrap_or("")
    }
    /// Reads `DriverProfile`'s `speed` field in place.
    pub fn speed(&self) -> Speed {
        let __p = ::ridl_rt::flatbuffers::field(self.buf, self.table, 2u16, 4usize)
            .unwrap_or(::core::option::Option::None)
            .unwrap_or(0usize);
        Speed::new_unchecked(
            f64::from(::ridl_rt::flatbuffers::read_f32(self.buf, __p).unwrap_or(0.0f32)),
        )
    }
    /// Reads `DriverProfile`'s `r#override` field in place.
    pub fn r#override(&self) -> Option<Speed> {
        match ::ridl_rt::flatbuffers::field(self.buf, self.table, 3u16, 4usize) {
            ::core::result::Result::Ok(::core::option::Option::Some(__p)) => {
                ::core::option::Option::Some(
                    Speed::new_unchecked(
                        f64::from(
                            ::ridl_rt::flatbuffers::read_f32(self.buf, __p)
                                .unwrap_or(0.0f32),
                        ),
                    ),
                )
            }
            _ => ::core::option::Option::None,
        }
    }
}
/// Writes `DriverProfile` as a FlatBuffers table and returns its position.
#[allow(deprecated)]
fn __ridl_fb_encode_driver_profile(
    value: &DriverProfile,
    builder: &mut ::ridl_rt::flatbuffers::Builder<'_>,
) -> ::core::result::Result<
    ::ridl_rt::flatbuffers::Pos,
    ::ridl_rt::payload::EncodeError,
> {
    let mut __fields = [::ridl_rt::flatbuffers::TableField {
        slot: 0u16,
        offset: 4u16,
        value: ::ridl_rt::flatbuffers::Field::Bool(false),
    }; 3usize];
    let mut __n = 0usize;
    __fields[__n] = ::ridl_rt::flatbuffers::TableField {
        slot: 0u16,
        offset: 4u16,
        value: ::ridl_rt::flatbuffers::Field::Offset(
            builder.push_string(&value.name.get())?,
        ),
    };
    __n += 1;
    __fields[__n] = ::ridl_rt::flatbuffers::TableField {
        slot: 2u16,
        offset: 8u16,
        value: {
            let __s = value.speed;
            ::ridl_rt::flatbuffers::Field::F32(__s.get() as f32)
        },
    };
    __n += 1;
    if let ::core::option::Option::Some(__v) = &value.r#override {
        __fields[__n] = ::ridl_rt::flatbuffers::TableField {
            slot: 3u16,
            offset: 12u16,
            value: {
                let __s = *__v;
                ::ridl_rt::flatbuffers::Field::F32(__s.get() as f32)
            },
        };
        __n += 1;
    }
    builder.push_table(16usize, 4usize, 4u16, &__fields[..__n])
}
/// Checks the FlatBuffers table at `table` against `DriverProfile`'s shape.
///
/// A total walk of the type's own shape: the structure in full,
/// an enum and an enum-set discriminant, a collection's declared
/// element count, and a named scalar's own range, length and
/// pattern, each over a borrow (`check`, beside `new` on the
/// type itself). By the time this returns `Ok`, every value
/// `decode` builds from these bytes satisfies its typl
/// constraints.
#[allow(deprecated)]
fn __ridl_fb_verify_driver_profile(
    buf: &[u8],
    table: usize,
) -> ::core::result::Result<(), ::ridl_rt::payload::VerifyError> {
    match ::ridl_rt::flatbuffers::field(buf, table, 0u16, 4usize)
        .map_err(::ridl_rt::payload::VerifyError::Structure)?
    {
        ::core::option::Option::Some(__p) => {
            let __s = ::ridl_rt::flatbuffers::string(buf, __p)
                .map_err(::ridl_rt::payload::VerifyError::Structure)?;
            Label::check(__s).map_err(::ridl_rt::payload::VerifyError::Contract)?;
        }
        ::core::option::Option::None => {
            return ::core::result::Result::Err(
                ::ridl_rt::payload::VerifyError::Structure(
                    ::ridl_rt::payload::Malformed::MissingRequired,
                ),
            );
        }
    }
    match ::ridl_rt::flatbuffers::field(buf, table, 2u16, 4usize)
        .map_err(::ridl_rt::payload::VerifyError::Structure)?
    {
        ::core::option::Option::Some(__p) => {
            let __raw = ::ridl_rt::flatbuffers::read_f32(buf, __p)
                .map_err(::ridl_rt::payload::VerifyError::Structure)?;
            Speed::check(&(f64::from(__raw)))
                .map_err(::ridl_rt::payload::VerifyError::Contract)?;
        }
        ::core::option::Option::None => {
            return ::core::result::Result::Err(
                ::ridl_rt::payload::VerifyError::Structure(
                    ::ridl_rt::payload::Malformed::MissingRequired,
                ),
            );
        }
    }
    match ::ridl_rt::flatbuffers::field(buf, table, 3u16, 4usize)
        .map_err(::ridl_rt::payload::VerifyError::Structure)?
    {
        ::core::option::Option::Some(__p) => {
            let __raw = ::ridl_rt::flatbuffers::read_f32(buf, __p)
                .map_err(::ridl_rt::payload::VerifyError::Structure)?;
            Speed::check(&(f64::from(__raw)))
                .map_err(::ridl_rt::payload::VerifyError::Contract)?;
        }
        ::core::option::Option::None => {}
    }
    ::core::result::Result::Ok(())
}
/// Builds `DriverProfile` from the FlatBuffers table at `table`.
///
/// It cannot fail. A read that could is discharged with the
/// neutral value of its own type — zero, the empty string or
/// collection, the first declared enum variant — and `verify` is
/// what makes those branches unreachable. A named scalar is
/// built with its unchecked constructor (`new_unchecked`) over a
/// value `verify` has already range-checked (`check`), so this
/// never re-checks and never fails.
#[allow(deprecated)]
fn __ridl_fb_decode_driver_profile(buf: &[u8], table: usize) -> DriverProfile {
    DriverProfile {
        name: {
            let __p = ::ridl_rt::flatbuffers::field(buf, table, 0u16, 4usize)
                .unwrap_or(::core::option::Option::None)
                .unwrap_or(0usize);
            Label::new_unchecked(
                String::from(::ridl_rt::flatbuffers::string(buf, __p).unwrap_or("")),
            )
        },
        speed: {
            let __p = ::ridl_rt::flatbuffers::field(buf, table, 2u16, 4usize)
                .unwrap_or(::core::option::Option::None)
                .unwrap_or(0usize);
            Speed::new_unchecked(
                f64::from(::ridl_rt::flatbuffers::read_f32(buf, __p).unwrap_or(0.0f32)),
            )
        },
        r#override: match ::ridl_rt::flatbuffers::field(buf, table, 3u16, 4usize) {
            ::core::result::Result::Ok(::core::option::Option::Some(__p)) => {
                ::core::option::Option::Some(
                    Speed::new_unchecked(
                        f64::from(
                            ::ridl_rt::flatbuffers::read_f32(buf, __p).unwrap_or(0.0f32),
                        ),
                    ),
                )
            }
            _ => ::core::option::Option::None,
        },
    }
}
#[allow(deprecated)]
impl ::ridl_rt::payload::Payload<::ridl_rt::encoding::FlatBuffers> for DriverProfile {
    /// The largest FlatBuffers buffer any legal `DriverProfile` encodes to: 1118 bytes.
    ///
    /// `ridl_ir::projection::flatbuffers::max_size` computed it,
    /// which is the one implementation of the bound (design note
    /// D-6): each table is charged its `soffset`, its inline
    /// fields, its vtable and one alignment event per slot; a
    /// string four bytes per declared character plus a
    /// terminator; a collection its declared maximum. It is a
    /// literal rather than an expression over the field types
    /// because that slack is not expressible in Rust's type
    /// system.
    const MAX_SIZE: usize = 1118usize;
    type View<'a> = DriverProfileFbView<'a>;
    fn encode<'o>(
        &self,
        out: &'o mut [u8],
    ) -> ::core::result::Result<
        ::ridl_rt::payload::Encoded<'o, Self::View<'o>>,
        ::ridl_rt::payload::EncodeError,
    > {
        let mut builder = ::ridl_rt::flatbuffers::Builder::new(out);
        let __root = __ridl_fb_encode_driver_profile(self, &mut builder)?;
        let bytes = builder.finish(__root, 8usize)?;
        let table = ::ridl_rt::flatbuffers::root(bytes).unwrap_or(0usize);
        ::core::result::Result::Ok(::ridl_rt::payload::Encoded {
            bytes,
            view: DriverProfileFbView {
                buf: bytes,
                table,
            },
        })
    }
    fn verify(
        buf: &[u8],
    ) -> ::core::result::Result<Self::View<'_>, ::ridl_rt::payload::VerifyError> {
        if buf.len()
            > <Self as ::ridl_rt::payload::Payload<
                ::ridl_rt::encoding::FlatBuffers,
            >>::MAX_SIZE
        {
            return ::core::result::Result::Err(
                ::ridl_rt::payload::VerifyError::Structure(
                    ::ridl_rt::payload::Malformed::TooLarge,
                ),
            );
        }
        let table = ::ridl_rt::flatbuffers::root(buf)
            .map_err(::ridl_rt::payload::VerifyError::Structure)?;
        __ridl_fb_verify_driver_profile(buf, table)?;
        ::core::result::Result::Ok(DriverProfileFbView { buf, table })
    }
    fn decode(
        r: ::ridl_rt::payload::Ref<'_, Self, ::ridl_rt::encoding::FlatBuffers>,
    ) -> Self {
        let __view = r.view();
        __ridl_fb_decode_driver_profile(__view.buf, __view.table)
    }
}
